<resources>
    <string name="app_name">Climber App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Climber App</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_alarms">Alarms</string>
    <string name="menu_devices">Devices</string>
    <string name="menu_sites">Sites</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_logout">LogOut</string>
    <string name="connected">Connected</string>
    <string name="more">More</string>
    <string name="alarm_details">Alarm Details</string>
    <string name="inactive_device">Inactive Device</string>
    <string name="battery_low">Battery Low</string>
    <string name="inactive_clamp">Inactive Clamp</string>
    <string name="free_fall">Free Fall</string>
    <string name="minor">Minor</string>
    <string name="major">Major</string>
    <string name="released_alarm">Released Alarm</string>
    <string name="critical">Critical</string>
    <string name="active_alarm">Active Alarm</string>
    <string name="sos">SOS</string>
    <string name="total_devices">Total Devices</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="search">Search</string>
    <string name="enter_your_device_id">Enter your Device Id</string>
    <string name="category_of_alarm">Category Of Alarm</string>
    <string name="device_id">Device Id</string>
    <string name="definition">Definition</string>
    <string name="time">Time</string>
    <string name="clear">Clear</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="todo">TODO</string>
    <string name="release">Release</string>
</resources>