<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_alarms"
            android:icon="@drawable/alarm"
            android:title="@string/menu_alarms" />
        <item
            android:id="@+id/nav_devices"
            android:icon="@drawable/device_icon"
            android:title="@string/menu_devices" />
        <item
            android:id="@+id/nav_sites"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_sites" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_reports" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_exit_to_app_24"
            android:title="@string/menu_logout" />
    </group>
</menu>