<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.climberapp.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_alarms"
        android:name="com.example.climberapp.ui.alarms.AlarmsFragment"
        android:label="@string/menu_alarms"
        tools:layout="@layout/fragment_alarms" />

    <fragment
        android:id="@+id/nav_devices"
        android:name="com.example.climberapp.ui.devices.DevicesFragment"
        android:label="@string/menu_devices"
        tools:layout="@layout/fragment_alarms" />
    <fragment
        android:id="@+id/nav_sites"
        android:name="com.example.climberapp.ui.sites.SitesFragment"
        android:label="@string/menu_sites"
        tools:layout="@layout/fragment_alarms" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.climberapp.ui.reports.ReportsFragment"
        android:label="@string/menu_reports"
        tools:layout="@layout/fragment_reports" />
</navigation>