<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_marginTop="-10dp"
                android:background="@drawable/side_vertical_bar"
                android:layout_width="10dp"
                android:layout_height="match_parent"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/column2TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_centerVertical="true"
                    android:gravity="start"
                    android:text="@string/device_id"    
                    android:textColor="@color/darkgrey"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:scaleType="fitXY"
                    android:layout_marginRight="15dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/critical" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <TextView
                    android:layout_centerVertical="true"
                    android:id="@+id/column4TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/time"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_marginRight="15dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="end"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/battery" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_button_background"
                android:layout_width="200dp"
                android:layout_height="42dp"
                android:layout_gravity="center">

                <TextView
                    android:layout_centerInParent="true"
                    android:id="@+id/myButton"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release"
                    android:textColor="@color/red"
                    android:textSize="18sp" />
            </RelativeLayout>
        </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>